--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,3 +15,6 @@ trainer:
   root_dir: artifacts/training
   log_file: artifacts/training/train_logs.csv
   trained_model_path: artifacts/training/model.h5
+
+evaluation:
+  mlflow_uri: https://dagshub.com/Om-Doiphode/MLOps_Project.mlflow
